添加微服务的配置文件仓库

--- a/demo-config/src/main/resources/application.yml
+++ b/demo-config/src/main/resources/application.yml
@@ -5,7 +5,10 @@ spring:
     config:
       server:
         git:
-          basedir:
-              
+          uri: https://github.com/zhangqiang110/demo-spring-cloud.git/
+          search-paths:
+          - demo-config-repo
+          username: momogoing@163.com
+          password: xiaoqiang2008
 server:
   port: 8161
