添加配置文件到config-repo

--- a/demo-feign/src/main/resources/application.yml
+++ b/demo-feign/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: demo-feign
+    name: DEMO-FEIGN
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss.SSS
     time-zone: Asia/Shanghai
