--- a/demo-zuul/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/demo-zuul/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -13,5 +13,15 @@
     "name": "ribbon.-read-timeout",
     "type": "java.lang.String",
     "description": "A description for 'ribbon.-read-timeout'"
+  },
+  {
+    "name": "ribbon.-connect-timeout",
+    "type": "java.lang.String",
+    "description": "A description for 'ribbon.-connect-timeout'"
+  },
+  {
+    "name": "ribbon.-read-timeout",
+    "type": "java.lang.String",
+    "description": "A description for 'ribbon.-read-timeout'"
   }
 ]}
