--- a/demo-zuul/src/main/resources/bootstrap.yml
+++ b/demo-zuul/src/main/resources/bootstrap.yml
@@ -6,3 +6,5 @@ spring:
       profile: default
       label: master
       uri: http://localhost:8161/
+      username: demoConfig
+      password: 5ad88542-539e-4483-9f53-ecd54486723f
