提交部分更新数据

--- a/demo-config/src/main/resources/bootstrap.yml
+++ b/demo-config/src/main/resources/bootstrap.yml
@@ -1,12 +1,10 @@
-#encrypt:
-#  rsa:
-#    algorithm: oaep
-#    salt: demoConfigSalt
-#    strong: false
-#  key-store:
-#    location: /demo-config.keystore
-#    password: 123456
-#    alias: config-server
-#    secret: 123456
 encrypt:
-  key: myKey
+  rsa:
+    algorithm: oaep
+    salt: demoConfigSalt
+    strong: false
+  key-store:
+    location: demo-config.keystore
+    password: 123456
+    alias: config-server
+    secret: 123456
