--- a/demo-config/src/main/resources/application.yml
+++ b/demo-config/src/main/resources/application.yml
@@ -12,27 +12,12 @@ spring:
           password: xiaoqiang2008
         encrypt:
           enabled: true
-  security:
-    user:
-      name: demoConfig
-      password: 5ad88542-539e-4483-9f53-ecd54486723f
-server:
-  port: 8161
 management:
   endpoints:
     web:
       exposure:
         include: '*'
-#      cors:
-#        allowed-headers: '*'
-#        allowed-methods:
-#        - HEAD
-#        - GET
-#        - POST
-#        - PUT
-#        - PATCH
-#        - DELETE
-#        - OPTIONS
-#        allowed-origins:
-#        - localhost
-#        - 172.17.125.67
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://peer1:8761/demo/eureka/,http://peer2:8762/demo/eureka/
