--- a/demo-zuul/src/main/resources/application.yml
+++ b/demo-zuul/src/main/resources/application.yml
@@ -1,3 +1,17 @@
+spring:
+  rabbitmq:
+    addresses: 192.168.199.113:5672,192.168.199.114:5672
+    username: demo
+    password: 1990912
+    virtual-host: demo
+    connection-timeout: 60000
+server:
+  port: 8261
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
 zuul:
   add-host-header: true
   routes:
@@ -6,7 +20,7 @@ zuul:
       serviceId: DEMOONE
     demo-feign:
       path: /demo-feign/**
-      serviceId: DEMO-FEIGN
+      url: http://localhost:8361/demo/
   retryable: true
 hystrix:
   command:
@@ -18,3 +32,5 @@ hystrix:
 ribbon:
   ConnectTimeout: 5000
   ReadTimeout: 5000
+app:
+  from: local-file-1.0
