--- a/demoone/src/main/resources/application.yml
+++ b/demoone/src/main/resources/application.yml
@@ -1,6 +1,4 @@
 spring:
-  application:
-    name: DEMOONE-V1
   banner:
     charset: UTF-8
   messages:
@@ -10,10 +8,20 @@ spring:
       charset: UTF-8
       enabled: true
       force: true
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://peer1:8761/demo/eureka/,http://peer2:8762/demo/eureka/
+  cloud:
+    config:
+      fail-fast: true
+      profile: default
+      label: master
+      discovery:
+        enabled: true
+        service-id: DEMO-CONFIG
+  rabbitmq:
+    addresses: 192.168.199.113:5672,192.168.199.114:5672
+    username: demo
+    password: 1990912
+    virtual-host: demo
+    connection-timeout: 60000
 management:
   endpoints:
     web:
@@ -24,3 +32,5 @@ server:
     context-path: /demo
   tomcat:
     uri-encoding: UTF-8
+app:
+  from: demoone-local-1.0
