--- a/demo-zuul/src/main/resources/bootstrap.yml
+++ b/demo-zuul/src/main/resources/bootstrap.yml
@@ -3,6 +3,7 @@ spring:
     name: DEMO-ZUUL
   cloud:
     config:
+      fail-fast: true
       profile: default
       label: master
       discovery:
