--- a/demo-zuul/src/main/resources/bootstrap.yml
+++ b/demo-zuul/src/main/resources/bootstrap.yml
@@ -11,6 +11,11 @@ spring:
         service-id: DEMO-CONFIG
 server:
   port: 8261
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
 eureka:
   client:
     serviceUrl:
