--- a/demoone/src/main/resources/bootstrap.yml
+++ b/demoone/src/main/resources/bootstrap.yml
@@ -9,3 +9,7 @@ spring:
       discovery:
         enabled: true
         service-id: DEMO-CONFIG
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://peer1:8761/demo/eureka/,http://peer2:8762/demo/eureka/
