--- a/demo-config/src/main/resources/application.yml
+++ b/demo-config/src/main/resources/application.yml
@@ -12,6 +12,12 @@ spring:
           password: xiaoqiang2008
         encrypt:
           enabled: true
+  rabbitmq:
+    addresses: 192.168.199.113:5672,192.168.199.114:5672
+    username: demo
+    password: 1990912
+    virtual-host: demo
+    connection-timeout: 60000
 management:
   endpoints:
     web:
