--- a/demo-zuul/src/main/resources/application.yml
+++ b/demo-zuul/src/main/resources/application.yml
@@ -1,3 +1,18 @@
+spring:
+  application:
+    rabbitmq:
+      addresses: 192.168.199.113:5672,192.168.199.114:5672
+      username: demo
+      password: 1990912
+      virtual-host: demo
+      connection-timeout: 60000
+server:
+  port: 8261
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
 zuul:
   add-host-header: true
   routes:
