--- a/demo-stream-mall/src/main/resources/application.yml
+++ b/demo-stream-mall/src/main/resources/application.yml
@@ -7,5 +7,17 @@ spring:
     password: 1990912
     virtual-host: demo
     connection-timeout: 60000
+  cloud:
+    stream:
+      bindings:
+        order_to_mall_01:
+          group: demo_stream_mall
+          destination: demo.order_to_mall_01
+          content-type: application/json
+        purchase_to_mall_01:
+          group: demo_stream_mall
+          destination: demo.purchase_to_mall_01
+          content-type: application/json
 server:
-  port: 8861
+  servlet:
+    context-path: /demo
