--- a/demo-stream-mall/src/main/resources/application.yml
+++ b/demo-stream-mall/src/main/resources/application.yml
@@ -5,6 +5,21 @@ spring:
     password: 1990912
     virtual-host: demo
     connection-timeout: 60000
+  zipkin:
+    base-url: http://localhost:9411/
+#    sender:
+#      type: rabbit
+#    discovery-client-enabled: true
+#    locator:
+#      discovery:
+#        enabled: true
+  sleuth:
+    sampler:
+      probability: 1.0
 server:
   servlet:
     context-path: /demo
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://peer1:8761/demo/eureka/,http://peer2:8762/demo/eureka/
