--- a/demo-stream-order/src/main/resources/application.yml
+++ b/demo-stream-order/src/main/resources/application.yml
@@ -23,7 +23,22 @@ spring:
           group: demo_stream_order
           destination: demo.order_to_purchase_redirect_mall_01
           content-type: application/json
+  zipkin:
+    base-url: http://localhost:9411/
+#    sender:
+#      type: rabbit
+#    discovery-client-enabled: true
+#    locator:
+#      discovery:
+#        enabled: true
+  sleuth:
+    sampler:
+      probability: 1.0      
 server:
   port: 8871
   servlet:
     context-path: /demo
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://peer1:8761/demo/eureka/,http://peer2:8762/demo/eureka/
